Add node modules and Yarn v2 files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,9 @@ __marimo__/
 # documentation and private notes
 docs/private/
 docs/Private/
+
+# node modules
+node_modules/
+# yarn v2
+.pnp.cjs
+.pnp.loader.mjs
